Cleaning up html, projects link change, principal investigators publications removed

--- a/footer.html
+++ b/footer.html
@@ -1,68 +1,64 @@
 <footer
-class="page_footer ds ms section_padding_top_100 section_padding_bottom_100"
+  class="page_footer ds ms section_padding_top_100 section_padding_bottom_100"
 >
-<div class="container">
-  <div class="row">
-    <div
-      class="col-md-4 col-sm-6 to_animate text-center"
-      data-animation="fadeInUp"
-    >
-      <div class="widget widget_text greylinks topmargin_20">
-        <h3 class="widget-title">PINE labs</h3>
-        <p>
-          Participation, Inclusion, and Education.
-        </p>
-     
-        &nbsp;
+  <div class="container">
+    <div class="row">
+      <div
+        class="col-md-4 col-sm-6 to_animate text-center"
+        data-animation="fadeInUp"
+      >
+        <div class="widget widget_text greylinks topmargin_20">
+          <h3 class="widget-title">PINE labs</h3>
+          <p>Participation, Inclusion, and Education.</p>
+
+          &nbsp;
+        </div>
       </div>
-    </div>
-    <div
-      class="col-md-4 col-sm-6 to_animate text-center"
-      data-animation="fadeInUp"
-    >
-      <div class="widget widget_text greylinks topmargin_20">
-        <h3 class="widget-title">Contacts</h3>
-        <p class="margin_0">
-          University of Alberta, 1-84 Corbett Hall
-        </p>
-        <p class="margin_0">Edmonton, Alberta, Canada T6G 2G4</p>
-        <p class="margin_0">Shu-Ping Chen, Ph.D., OT Reg.(Alberta)</p>
-        <p class="margin_0">(780)492-0894</p>
-        <p class="margin_0">
-          <a href="mailto:shuping2@ualberta.ca "
-            >shuping2@ualberta.ca
-          </a>
-        </p>
+      <div
+        class="col-md-4 col-sm-6 to_animate text-center"
+        data-animation="fadeInUp"
+      >
+        <div class="widget widget_text greylinks topmargin_20">
+          <h3 class="widget-title">Contacts</h3>
+          <p class="margin_0">University of Alberta, 1-84 Corbett Hall</p>
+          <p class="margin_0">Edmonton, Alberta, Canada T6G 2G4</p>
+          <p class="margin_0">Shu-Ping Chen, Ph.D., OT Reg.(Alberta)</p>
+          <p class="margin_0">(780)492-0894</p>
+          <p class="margin_0">
+            <a href="mailto:shuping2@ualberta.ca ">shuping2@ualberta.ca </a>
+          </p>
+        </div>
       </div>
-    </div>
-    <div
-      class="col-md-4 col-sm-6 to_animate text-center clear-sm"
-      data-animation="fadeInUp"
-    >
-      <div class="widget widget_nav_menu greylinks topmargin_20">
-        <h3 class="widget-title">Navigation</h3>
-        <ul class="menu">
-          <li class="">
-            <a href="/index.html">Home</a>
-          </li>
-          <li class="">
-            <a href="/group_projects.html">Projects</a>
-          </li>
-          <li class="">
-            <a href="/principal_investigators.html">Principal Investigators</a>
-          </li>
-          <li class="">
-            <a href="/lab_members.html">Lab Members</a>
-          </li>
-          <li class="">
-            <a href="/publications.html">Publications</a>
-          </li>
-          <li class="">
-            <a href="/knowledge_translation.html">Knowledge Translation</a>
-          </li>
-        </ul>
+      <div
+        class="col-md-4 col-sm-6 to_animate text-center clear-sm"
+        data-animation="fadeInUp"
+      >
+        <div class="widget widget_nav_menu greylinks topmargin_20">
+          <h3 class="widget-title">Navigation</h3>
+          <ul class="menu">
+            <li class="">
+              <a href="/index.html">Home</a>
+            </li>
+            <li class="">
+              <a href="/group_projects.html">Projects</a>
+            </li>
+            <li class="">
+              <a href="/principal_investigators.html"
+                >Principal Investigators</a
+              >
+            </li>
+            <li class="">
+              <a href="/lab_members.html">Lab Members</a>
+            </li>
+            <li class="">
+              <a href="/publications.html">Publications</a>
+            </li>
+            <li class="">
+              <a href="/knowledge_translation.html">Knowledge Translation</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
-</div>
 </footer>
