--- a/header.html
+++ b/header.html
@@ -1,53 +1,72 @@
 <header
-class="page_header header_white table_section columns_margin_0 toggle-xs-right" id="header"
+  class="page_header header_white table_section columns_margin_0 toggle-xs-right"
+  id="header"
 >
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-lg-2 col-md-3 col-sm-5">
-      <a href="https://psyclin.github.io/PineLabs/index.html" class="logo logo_image">
-        <img src="https://psyclin.github.io/PineLabs/images/logo.png" alt="" />
-      </a>
-      <span class="toggle_menu visible-xs">
-        <span></span>
-      </span>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-2 col-md-3 col-sm-5">
+        <a
+          href="https://psyclin.github.io/PineLabs/index.html"
+          class="logo logo_image"
+        >
+          <img
+            src="https://psyclin.github.io/PineLabs/images/logo.png"
+            alt=""
+          />
+        </a>
+        <span class="toggle_menu visible-xs">
+          <span></span>
+        </span>
+      </div>
+      <!-- eof .header_left_logo -->
+      <div class="col-lg-8 col-md-6 col-sm-2 text-center">
+        <!-- main nav start -->
+        <nav class="mainmenu_wrapper">
+          <ul class="mainmenu nav sf-menu">
+            <li class="active">
+              <a href="https://psyclin.github.io/PineLabs/index.html">Home</a>
+            </li>
+
+            <li>
+              <a href="https://psyclin.github.io/PineLabs/group_projects.html"
+                >Projects</a
+              >
+            </li>
+
+            <li>
+              <a
+                href="https://psyclin.github.io/PineLabs/principal_investigators.html"
+                >Principal Investigators</a
+              >
+            </li>
+
+            <li>
+              <a href="https://psyclin.github.io/PineLabs/lab_members.html"
+                >Lab Members</a
+              >
+            </li>
+
+            <li>
+              <a href="https://psyclin.github.io/PineLabs/publications.html"
+                >Publications</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://psyclin.github.io/PineLabs/knowledge_translation.html"
+                >Knowledge Translation</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <!-- eof main nav -->
+        <span class="toggle_menu hidden-xs">
+          <span></span>
+        </span>
+      </div>
+      <!-- eof .header_mainmenu -->
+
+      <!-- eof .header_right_buttons -->
     </div>
-    <!-- eof .header_left_logo -->
-    <div class="col-lg-8 col-md-6 col-sm-2 text-center">
-      <!-- main nav start -->
-      <nav class="mainmenu_wrapper">
-        <ul class="mainmenu nav sf-menu">
-          <li class="active">
-            <a href="https://psyclin.github.io/PineLabs/index.html">Home</a>
-          </li>
-
-          <li>
-            <a href="https://psyclin.github.io/PineLabs/group_projects.html">Projects</a>
-          </li>
-
-          <li>
-            <a href="https://psyclin.github.io/PineLabs/principal_investigators.html">Principal Investigators</a>
-          </li>
-
-          <li>
-            <a href="https://psyclin.github.io/PineLabs/lab_members.html">Lab Members</a>
-          </li>
-
-          <li>
-            <a href="https://psyclin.github.io/PineLabs/publications.html">Publications</a>
-          </li>
-          <li>
-            <a href="https://psyclin.github.io/PineLabs/knowledge_translation.html">Knowledge Translation</a>
-          </li>
-        </ul>
-      </nav>
-      <!-- eof main nav -->
-      <span class="toggle_menu hidden-xs">
-        <span></span>
-      </span>
-    </div>
-    <!-- eof .header_mainmenu -->
-
-    <!-- eof .header_right_buttons -->
   </div>
-</div>
 </header>
