--- a/knowledge_translation.html
+++ b/knowledge_translation.html
@@ -102,7 +102,6 @@
       <div id="box_wrapper">
         <!-- template sections -->
 
-
         <div id="header"></div>
 
         <section class="intro_section page_mainslider ds">
@@ -119,9 +118,7 @@
                             <h3>Currently Under Construction</h3>
                           </div>
                           <div class="intro-layer" data-animation="fadeInLeft">
-                            <p class="grey big">
-                              Sorry for the inconvenience
-                            </p>
+                            <p class="grey big">Sorry for the inconvenience</p>
                           </div>
                         </div>
                         <!-- eof .slide_description -->
@@ -138,7 +135,7 @@
           </div>
           <!-- eof flexslider -->
         </section>
-<div id="footer"></div>
+        <div id="footer"></div>
       </div>
       <!-- eof #box_wrapper -->
     </div>
