--- a/lab_members.html
+++ b/lab_members.html
@@ -104,7 +104,9 @@
 
         <div id="header"></div>
 
-        <section class="page_breadcrumbs cs main_color2 parallax section_padding_25">
+        <section
+          class="page_breadcrumbs cs main_color2 parallax section_padding_25"
+        >
           <div class="container">
             <div class="row">
               <div class="col-sm-12 text-center">
@@ -114,41 +116,50 @@
           </div>
         </section>
 
-        <section class="ls page_portfolio section_padding_top_25 section_padding_bottom_25">
+        <section
+          class="ls page_portfolio section_padding_top_25 section_padding_bottom_25"
+        >
           <div class="container">
             <div class="row">
               <div class="col-sm-12">
                 <div class="isotope_container isotope row masonry-layout">
-                  
                   <div class="isotope-item col-md-4 col-sm-6">
-                    <div class="thumbnail top-color-border with_background with_padding">
+                    <div
+                      class="thumbnail top-color-border with_background with_padding"
+                    >
                       <img src="images/team/Hsin-Hsiu-Yeh.jpg" alt="" />
                       <div class="caption">
                         <h3>
-                          <a href="members/hsin-hsiu_essential_yeh.html">Hsin-Hsiu Essential Yeh</a>
+                          <a href="members/hsin-hsiu_essential_yeh.html"
+                            >Hsin-Hsiu Essential Yeh</a
+                          >
                         </h3>
-                        <p>
-                          Ph.D. Candidate, University of Alberta
-                        </p>
+                        <p>Ph.D. Candidate, University of Alberta</p>
                         <div class="item-button darklinks">
-                          <a href="members/hsin-hsiu_essential_yeh.html" class="small-text">About</a>
+                          <a
+                            href="members/hsin-hsiu_essential_yeh.html"
+                            class="small-text"
+                            >About</a
+                          >
                         </div>
                       </div>
                     </div>
                   </div>
 
                   <div class="isotope-item col-md-4 col-sm-6">
-                    <div class="thumbnail top-color-border with_background with_padding">
+                    <div
+                      class="thumbnail top-color-border with_background with_padding"
+                    >
                       <img src="images/team/02.jpg" alt="" />
                       <div class="caption">
                         <h3>
                           <a href="members/fatema_akbar.html">Fatema Akbar</a>
                         </h3>
-                        <p>
-                          Ph. D. Student,  University of Alberta
-                        </p>
+                        <p>Ph. D. Student, University of Alberta</p>
                         <div class="item-button darklinks">
-                          <a href="members/fatema_akbar.html" class="small-text">About</a>
+                          <a href="members/fatema_akbar.html" class="small-text"
+                            >About</a
+                          >
                         </div>
                       </div>
                     </div>
@@ -165,7 +176,9 @@
                         </h3>
                         <p>Ph.D student, University of Alberta</p>
                         <div class="item-button darklinks">
-                          <a href="members/selina_fan.html" class="small-text">About</a>
+                          <a href="members/selina_fan.html" class="small-text"
+                            >About</a
+                          >
                         </div>
                       </div>
                     </div>
@@ -182,7 +195,9 @@
                         </h3>
                         <p>Ph.D Candidate, University of Alberta</p>
                         <div class="item-button darklinks">
-                          <a href="members/john_hu.html" class="small-text">About</a>
+                          <a href="members/john_hu.html" class="small-text"
+                            >About</a
+                          >
                         </div>
                       </div>
                     </div>
@@ -193,7 +208,9 @@
           </div>
         </section>
 
-        <section class="page_breadcrumbs cs main_color2 parallax section_padding_25">
+        <section
+          class="page_breadcrumbs cs main_color2 parallax section_padding_25"
+        >
           <div class="container">
             <div class="row">
               <div class="col-sm-12 text-center">
@@ -202,41 +219,50 @@
             </div>
           </div>
         </section>
-        <section class="ls page_portfolio section_padding_top_25 section_padding_bottom_25">
+        <section
+          class="ls page_portfolio section_padding_top_25 section_padding_bottom_25"
+        >
           <div class="container">
             <div class="row">
               <div class="col-sm-12">
                 <div class="isotope_container isotope row masonry-layout">
-                  
                   <div class="isotope-item col-md-4 col-sm-6">
-                    <div class="thumbnail top-color-border with_background with_padding">
+                    <div
+                      class="thumbnail top-color-border with_background with_padding"
+                    >
                       <img src="images/team/03.jpg" alt="" />
                       <div class="caption">
                         <h3>
                           <a href="members/priya_kar.html">Priya Kar</a>
                         </h3>
-                        <p>
-                          Masters Student, University of Alberta
-                        </p>
+                        <p>Masters Student, University of Alberta</p>
                         <div class="item-button darklinks">
-                          <a href="members/priya_kar.html" class="small-text">About</a>
+                          <a href="members/priya_kar.html" class="small-text"
+                            >About</a
+                          >
                         </div>
                       </div>
                     </div>
                   </div>
 
                   <div class="isotope-item col-md-4 col-sm-6">
-                    <div class="thumbnail top-color-border with_background with_padding">
+                    <div
+                      class="thumbnail top-color-border with_background with_padding"
+                    >
                       <img src="images/team/02.jpg" alt="" />
                       <div class="caption">
                         <h3>
-                          <a href="members/rosanna_wegner.html">Rosanna Wegner</a>
+                          <a href="members/rosanna_wegner.html"
+                            >Rosanna Wegner</a
+                          >
                         </h3>
-                        <p>
-                          Masters Student,  University of Alberta
-                        </p>
+                        <p>Masters Student, University of Alberta</p>
                         <div class="item-button darklinks">
-                          <a href="members/rosanna_wegner.html" class="small-text">About</a>
+                          <a
+                            href="members/rosanna_wegner.html"
+                            class="small-text"
+                            >About</a
+                          >
                         </div>
                       </div>
                     </div>
@@ -249,11 +275,17 @@
                       <img src="images/team/Amir Shamsi Ardekani.jpg" alt="" />
                       <div class="caption">
                         <h3>
-                          <a href="members/amir_shamsi_ardekani.html">Amir Shamsi Ardekani</a>
+                          <a href="members/amir_shamsi_ardekani.html"
+                            >Amir Shamsi Ardekani</a
+                          >
                         </h3>
                         <p>Masters student, University of Alberta</p>
                         <div class="item-button darklinks">
-                          <a href="members/amir_shamsi_ardekani.html" class="small-text">About</a>
+                          <a
+                            href="members/amir_shamsi_ardekani.html"
+                            class="small-text"
+                            >About</a
+                          >
                         </div>
                       </div>
                     </div>
