--- a/members/hsin-hsiu_essential_yeh.html
+++ b/members/hsin-hsiu_essential_yeh.html
@@ -17,10 +17,23 @@
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/animations.css" />
-    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/fonts.css" />
-    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/main.css" id="color-switcher-link" />
+    <link
+      rel="stylesheet"
+      href="https://psyclin.github.io/PineLabs/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://psyclin.github.io/PineLabs/css/animations.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://psyclin.github.io/PineLabs/css/fonts.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://psyclin.github.io/PineLabs/css/main.css"
+      id="color-switcher-link"
+    />
     <script src="https://psyclin.github.io/PineLabs/js/vendor/modernizr-2.6.2.min.js"></script>
 
     <!--[if lt IE 9]>
@@ -103,7 +116,7 @@
         <!-- template sections -->
 
         <div id="header"></div>
-		
+
         <section
           class="page_breadcrumbs cs main_color2 parallax section_padding_50"
         >
@@ -121,13 +134,16 @@
             <div class="row">
               <div class="col-md-5">
                 <div class="text-center">
-                  <img src="https://psyclin.github.io/PineLabs/images/team/Hsin-Hsiu-Yeh.jpg" alt="" class="round" />
+                  <img
+                    src="https://psyclin.github.io/PineLabs/images/team/Hsin-Hsiu-Yeh.jpg"
+                    alt=""
+                    class="round"
+                  />
                   <h2 class="bottommargin_0">Hsin-Hsiu Essential Yeh</h2>
                   <p class="small-text">PH.D. Candidate</p>
                 </div>
 
                 <ul class="list1 no-bullets topmargin_40">
-
                   <li>
                     <div class="media small-teaser">
                       <div class="media-left">
@@ -145,8 +161,6 @@
               </div>
 
               <div class="col-md-6 col-md-offset-1">
-                
-
                 <!-- Nav tabs -->
                 <ul class="nav nav-tabs topmargin_40" role="tablist">
                   <li class="active">
@@ -162,25 +176,32 @@
                   <div class="tab-pane fade in active" id="tab1">
                     <h3 class="topmargin_0">Biography:</h3>
                     <p>
-                      Hsin-Hsiu Essentia Yeh is a dedicated occupational therapist and researcher with
-                      extensive expertise in rehabilitation medicine. Currently pursuing a PhD at the
-                      University of Alberta, she focuses on culturally appropriate palliative care and
-                      occupational therapy interventions. Essential’s career spans over a decade of clinical
-                      practice at leading institutions in Taiwan, complemented by research on mental health,
-                      palliative care, and the Kawa model’s application in diverse contexts. Her work has
-                      been recognized with prestigious awards, including the Alberta Graduate Excellence
-                      Student Scholarship and the J. Gordin Kaplan Graduate Student Award. She has
-                      presented at international conferences and contributed to peer-reviewed journals,
-                      advancing knowledge in occupation-based therapy and its cultural relevance. A
-                      passionate educator, Essential has trained students and professionals worldwide,
-                      promoting evidence-based practice and innovative teaching methods in occupational
-                      therapy. Her commitment to integrating cultural understanding into therapy makes her a
-                      pioneer in her field.
+                      Hsin-Hsiu Essentia Yeh is a dedicated occupational
+                      therapist and researcher with extensive expertise in
+                      rehabilitation medicine. Currently pursuing a PhD at the
+                      University of Alberta, she focuses on culturally
+                      appropriate palliative care and occupational therapy
+                      interventions. Essential’s career spans over a decade of
+                      clinical practice at leading institutions in Taiwan,
+                      complemented by research on mental health, palliative
+                      care, and the Kawa model’s application in diverse
+                      contexts. Her work has been recognized with prestigious
+                      awards, including the Alberta Graduate Excellence Student
+                      Scholarship and the J. Gordin Kaplan Graduate Student
+                      Award. She has presented at international conferences and
+                      contributed to peer-reviewed journals, advancing knowledge
+                      in occupation-based therapy and its cultural relevance. A
+                      passionate educator, Essential has trained students and
+                      professionals worldwide, promoting evidence-based practice
+                      and innovative teaching methods in occupational therapy.
+                      Her commitment to integrating cultural understanding into
+                      therapy makes her a pioneer in her field.
                     </p>
                     <h3 class="topmargin_0">Ph. D. Thesis:</h3>
                     <p>
-                      Delivering Culturally Appropriate Palliative Care to Chinese Immigrants in
-Alberta: Insights from Healthcare Providers in a Qualitative Case Study
+                      Delivering Culturally Appropriate Palliative Care to
+                      Chinese Immigrants in Alberta: Insights from Healthcare
+                      Providers in a Qualitative Case Study
                     </p>
                   </div>
 
@@ -188,31 +209,36 @@ Alberta: Insights from Healthcare Providers in a Qualitative Case Study
                     <h3 class="topmargin_0">Research Articles:</h3>
                     <ul class="list1 darklinks">
                       <li>
-                        <a href="https://doi.org/10.1155/2022/1409320">Higher Rumination Tendency Is Associated with Reduced Positive
-                          Effects of Daily Activity Participation in People with Depressive Disorder.</a>
+                        <a href="https://doi.org/10.1155/2022/1409320"
+                          >Higher Rumination Tendency Is Associated with Reduced
+                          Positive Effects of Daily Activity Participation in
+                          People with Depressive Disorder.</a
+                        >
                       </li>
                       <li>
-                        <a href="https://doi.org/10.1080/07380577.2018.1544428">A model for occupation-based
-                          palliative care. Occupational Therapy in Health Care.</a>
+                        <a href="https://doi.org/10.1080/07380577.2018.1544428"
+                          >A model for occupation-based palliative care.
+                          Occupational Therapy in Health Care.</a
+                        >
                       </li>
                       <li>
-                        Mediation Effects of Daily Activity Participation between Rumination and
-                          Subjective Quality of Life in Persons with Depression.
+                        Mediation Effects of Daily Activity Participation
+                        between Rumination and Subjective Quality of Life in
+                        Persons with Depression.
                       </li>
                       <li>
-                        Validation of the Ruminative Response Scale-Chinese Version (RRS-C)
-                          for Persons with Depression in Taiwan.
+                        Validation of the Ruminative Response Scale-Chinese
+                        Version (RRS-C) for Persons with Depression in Taiwan.
                       </li>
                       <li>
-                        Teaching evidence-based practice to
-                          occupational therapy students during psychiatry fieldwork: a curriculum at a
-                          University hospital in Taiwan.
+                        Teaching evidence-based practice to occupational therapy
+                        students during psychiatry fieldwork: a curriculum at a
+                        University hospital in Taiwan.
                       </li>
                     </ul>
                   </div>
                 </div>
 
-                
                 <!-- eof .tab-content -->
               </div>
             </div>
