--- a/members/priya_kar.html
+++ b/members/priya_kar.html
@@ -17,10 +17,23 @@
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/animations.css" />
-    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/fonts.css" />
-    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/main.css" id="color-switcher-link" />
+    <link
+      rel="stylesheet"
+      href="https://psyclin.github.io/PineLabs/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://psyclin.github.io/PineLabs/css/animations.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://psyclin.github.io/PineLabs/css/fonts.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://psyclin.github.io/PineLabs/css/main.css"
+      id="color-switcher-link"
+    />
     <script src="https://psyclin.github.io/PineLabs/js/vendor/modernizr-2.6.2.min.js"></script>
 
     <!--[if lt IE 9]>
@@ -103,7 +116,7 @@
         <!-- template sections -->
 
         <div id="header"></div>
-		
+
         <section
           class="page_breadcrumbs cs main_color2 parallax section_padding_50"
         >
@@ -121,13 +134,16 @@
             <div class="row">
               <div class="col-md-5">
                 <div class="text-center">
-                  <img src="https://psyclin.github.io/PineLabs/images/team/03.jpg" alt="" class="round" />
+                  <img
+                    src="https://psyclin.github.io/PineLabs/images/team/03.jpg"
+                    alt=""
+                    class="round"
+                  />
                   <h2 class="bottommargin_0">Priya Kar</h2>
                   <p class="small-text">Masters Student</p>
                 </div>
 
                 <ul class="list1 no-bullets topmargin_40">
-
                   <li>
                     <div class="media small-teaser">
                       <div class="media-left">
@@ -145,8 +161,6 @@
               </div>
 
               <div class="col-md-6 col-md-offset-1">
-                
-
                 <!-- Nav tabs -->
                 <ul class="nav nav-tabs topmargin_40" role="tablist">
                   <li class="active">
@@ -161,13 +175,11 @@
                 <div class="tab-content top-color-border bottommargin_30">
                   <div class="tab-pane fade in active" id="tab1">
                     <h3 class="topmargin_0">Biography:</h3>
-                    <p>
-                      To be added...
-                    </p>
+                    <p>To be added...</p>
                     <h3 class="topmargin_0">Master's Thesis:</h3>
                     <p>
-                      The Influence of Restrictive Emotionality on Mental Health Help-Seeking Among
-University-Aged Men
+                      The Influence of Restrictive Emotionality on Mental Health
+                      Help-Seeking Among University-Aged Men
                     </p>
                   </div>
 
@@ -179,7 +191,6 @@ University-Aged Men
                   </div>
                 </div>
 
-                
                 <!-- eof .tab-content -->
               </div>
             </div>
