--- a/members/selina_fan.html
+++ b/members/selina_fan.html
@@ -16,10 +16,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/animations.css" />
-    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/fonts.css" />
-    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/main.css" id="color-switcher-link" />
+    <link
+      rel="stylesheet"
+      href="https://psyclin.github.io/PineLabs/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://psyclin.github.io/PineLabs/css/animations.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://psyclin.github.io/PineLabs/css/fonts.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://psyclin.github.io/PineLabs/css/main.css"
+      id="color-switcher-link"
+    />
     <script src="https://psyclin.github.io/PineLabs/js/vendor/modernizr-2.6.2.min.js"></script>
 
     <!--[if lt IE 9]>
@@ -102,7 +115,7 @@
         <!-- template sections -->
 
         <div id="header"></div>
-		
+
         <section
           class="page_breadcrumbs cs main_color2 parallax section_padding_50"
         >
@@ -120,13 +133,16 @@
             <div class="row">
               <div class="col-md-5">
                 <div class="text-center">
-                  <img src="https://psyclin.github.io/PineLabs/images/team/Selina-Fan-3.jpg" alt="" class="round" />
+                  <img
+                    src="https://psyclin.github.io/PineLabs/images/team/Selina-Fan-3.jpg"
+                    alt=""
+                    class="round"
+                  />
                   <h2 class="bottommargin_0">Selina Fan</h2>
                   <p class="small-text">PH.D. Candidate</p>
                 </div>
 
                 <ul class="list1 no-bullets topmargin_40">
-
                   <li>
                     <div class="media small-teaser">
                       <div class="media-left">
@@ -144,8 +160,6 @@
               </div>
 
               <div class="col-md-6 col-md-offset-1">
-                
-
                 <!-- Nav tabs -->
                 <ul class="nav nav-tabs topmargin_40" role="tablist">
                   <li class="active">
@@ -161,34 +175,42 @@
                   <div class="tab-pane fade in active" id="tab1">
                     <h3 class="topmargin_0">Biography:</h3>
                     <p>
-                      Selina Fan is a Ph.D. candidate in Rehabilitation Science at the University of Alberta
-and a practicing occupational therapist. Her research interest lies in developing mental
-health practices that are culturally safe, strength-based, and recovery-oriented. As an
-occupational therapist, Selina is dedicated to improving the quality of mental health care
-for Chinese Canadians and other ethnic and cultural minorities in Canada. Her work
-seeks to address inequalities and biases in Canadian mental health research while
-promoting the wellness of marginalized populations.
-Her doctoral research, Unsettling Co-Creation with Chinese Immigrants: A Post-
-Qualitative Inquiry on Mental Health and Wellness, focuses on reducing health
-inequities through empowerment and health promotion. Drawing on a traditional cultural
-awareness approach, she explores strategies to improve cultural and social
-determinants of mental health for diverse communities.
-Selina&#39;s journey began during her undergraduate studies at the University of Calgary,
-where she developed foundational research skills. Later, her master&#39;s work at the
-University of Alberta focused on the experiences of Chinese-Canadian parents raising
-children with Autism Spectrum Disorder, sparking her commitment to health equity.
-Recognized for her research excellence, Selina has contributed to projects on
-participatory action research with immigrant workers and campus drinking culture,
-bridging academic inquiry with real-world impact.
-
-With a unique blend of clinical and academic expertise, Selina strives to foster culturally
-grounded, community-informed practices that advance mental health care in Canada
-and beyond.
+                      Selina Fan is a Ph.D. candidate in Rehabilitation Science
+                      at the University of Alberta and a practicing occupational
+                      therapist. Her research interest lies in developing mental
+                      health practices that are culturally safe, strength-based,
+                      and recovery-oriented. As an occupational therapist,
+                      Selina is dedicated to improving the quality of mental
+                      health care for Chinese Canadians and other ethnic and
+                      cultural minorities in Canada. Her work seeks to address
+                      inequalities and biases in Canadian mental health research
+                      while promoting the wellness of marginalized populations.
+                      Her doctoral research, Unsettling Co-Creation with Chinese
+                      Immigrants: A Post- Qualitative Inquiry on Mental Health
+                      and Wellness, focuses on reducing health inequities
+                      through empowerment and health promotion. Drawing on a
+                      traditional cultural awareness approach, she explores
+                      strategies to improve cultural and social determinants of
+                      mental health for diverse communities. Selina&#39;s
+                      journey began during her undergraduate studies at the
+                      University of Calgary, where she developed foundational
+                      research skills. Later, her master&#39;s work at the
+                      University of Alberta focused on the experiences of
+                      Chinese-Canadian parents raising children with Autism
+                      Spectrum Disorder, sparking her commitment to health
+                      equity. Recognized for her research excellence, Selina has
+                      contributed to projects on participatory action research
+                      with immigrant workers and campus drinking culture,
+                      bridging academic inquiry with real-world impact. With a
+                      unique blend of clinical and academic expertise, Selina
+                      strives to foster culturally grounded, community-informed
+                      practices that advance mental health care in Canada and
+                      beyond.
                     </p>
                     <h3 class="topmargin_0">Ph. D. Thesis:</h3>
                     <p>
-                      Unsettling co-creation with Chinese immigrants: A post-qualitative inquiry on
-mental health and wellness
+                      Unsettling co-creation with Chinese immigrants: A
+                      post-qualitative inquiry on mental health and wellness
                     </p>
                   </div>
 
@@ -196,18 +218,23 @@ mental health and wellness
                     <h3 class="topmargin_0">Research Articles:</h3>
                     <ul class="list1 darklinks">
                       <li>
-                        <a href="https://doi.org/10.1080/09638288.2023.2227566">Western services for a Chinese-Canadian family with
-                          children with Autism spectrum disorder: Does culture play a role?</a>
+                        <a href="https://doi.org/10.1080/09638288.2023.2227566"
+                          >Western services for a Chinese-Canadian family with
+                          children with Autism spectrum disorder: Does culture
+                          play a role?</a
+                        >
                       </li>
                       <li>
-                        <a href="https://doi.org/10.1177/14767503241267895">Participatory Action Research:
-                          A Tool to Develop Occupational Health and Safety Education for New Immigrant Workers.</a>
+                        <a href="https://doi.org/10.1177/14767503241267895"
+                          >Participatory Action Research: A Tool to Develop
+                          Occupational Health and Safety Education for New
+                          Immigrant Workers.</a
+                        >
                       </li>
                     </ul>
                   </div>
                 </div>
 
-                
                 <!-- eof .tab-content -->
               </div>
             </div>
