--- a/index.html
+++ b/index.html
@@ -17,10 +17,23 @@
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/animations.css" />
-    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/fonts.css" />
-    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/main.css" id="color-switcher-link" />
+    <link
+      rel="stylesheet"
+      href="https://psyclin.github.io/PineLabs/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://psyclin.github.io/PineLabs/css/animations.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://psyclin.github.io/PineLabs/css/fonts.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://psyclin.github.io/PineLabs/css/main.css"
+      id="color-switcher-link"
+    />
     <script src="https://psyclin.github.io/PineLabs/js/vendor/modernizr-2.6.2.min.js"></script>
     <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
@@ -157,39 +170,46 @@
                   promote inclusive education and participation for marginalized
                   populations in various settings. The key areas of research and
                   practice in the PINE Lab include:
-				  </p>
-				 <ul>
-					<li class="fontsize_20 grey">
-					
-							<strong>Participation:</strong> Investigating how to foster active and meaningful participation in
-						educational, social, and professional contexts, especially for
-						those who are traditionally marginalized or underrepresented.</li>
-					<li class="fontsize_20 grey"> 
-						<strong>Inclusion:</strong> Developing and evaluating approaches to create more
-						inclusive environments, both in educational settings and the
-						broader community. This involves understanding and addressing
-						barriers to inclusion, such as social, physical, or
-						policy-related obstacles.</li>
-					<li class="fontsize_20 grey">
-						<strong>Education:</strong> Examining and advancing
-						educational practices and evaluation that support diverse
-						learning needs and promote equity in education. This includes
-						exploring pedagogies, curricula, and assessment methods that
-						accommodate a wide range of learners.</li>
-					<li class="fontsize_20 grey">
-						<strong>Collaboration and Community Engagement:</strong> Engaging with communities, educators,
-						policymakers, and other stakeholders to translate research
-						findings into practical, real-world applications and policies.</li>
-				 </ul>  
-				 
-                  <p class="fontsize_20 grey">The PINE Lab is characterized by its interdisciplinary
+                </p>
+                <ul>
+                  <li class="fontsize_20 grey">
+                    <strong>Participation:</strong> Investigating how to foster
+                    active and meaningful participation in educational, social,
+                    and professional contexts, especially for those who are
+                    traditionally marginalized or underrepresented.
+                  </li>
+                  <li class="fontsize_20 grey">
+                    <strong>Inclusion:</strong> Developing and evaluating
+                    approaches to create more inclusive environments, both in
+                    educational settings and the broader community. This
+                    involves understanding and addressing barriers to inclusion,
+                    such as social, physical, or policy-related obstacles.
+                  </li>
+                  <li class="fontsize_20 grey">
+                    <strong>Education:</strong> Examining and advancing
+                    educational practices and evaluation that support diverse
+                    learning needs and promote equity in education. This
+                    includes exploring pedagogies, curricula, and assessment
+                    methods that accommodate a wide range of learners.
+                  </li>
+                  <li class="fontsize_20 grey">
+                    <strong>Collaboration and Community Engagement:</strong>
+                    Engaging with communities, educators, policymakers, and
+                    other stakeholders to translate research findings into
+                    practical, real-world applications and policies.
+                  </li>
+                </ul>
+
+                <p class="fontsize_20 grey">
+                  The PINE Lab is characterized by its interdisciplinary
                   approach, drawing on expertise from occupational therapy,
                   education, psychology, rehabilitation, and other fields to
                   comprehensively address the challenges and opportunities at
                   the nexus of participation, inclusion, and education. It is a
                   hub for scholars, practitioners, and students committed to
                   making a positive impact in society through research,
-                  collaboration, and innovation.</p>
+                  collaboration, and innovation.
+                </p>
               </div>
             </div>
           </div>
