--- a/members/amir_shamsi_ardekani.html
+++ b/members/amir_shamsi_ardekani.html
@@ -17,10 +17,23 @@
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/animations.css" />
-    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/fonts.css" />
-    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/main.css" id="color-switcher-link" />
+    <link
+      rel="stylesheet"
+      href="https://psyclin.github.io/PineLabs/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://psyclin.github.io/PineLabs/css/animations.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://psyclin.github.io/PineLabs/css/fonts.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://psyclin.github.io/PineLabs/css/main.css"
+      id="color-switcher-link"
+    />
     <script src="https://psyclin.github.io/PineLabs/js/vendor/modernizr-2.6.2.min.js"></script>
 
     <!--[if lt IE 9]>
@@ -103,7 +116,7 @@
         <!-- template sections -->
 
         <div id="header"></div>
-		
+
         <section
           class="page_breadcrumbs cs main_color2 parallax section_padding_50"
         >
@@ -121,13 +134,16 @@
             <div class="row">
               <div class="col-md-5">
                 <div class="text-center">
-                  <img src="https://psyclin.github.io/PineLabs/images/team/Amir Shamsi Ardekani.jpg" alt="" class="round" />
+                  <img
+                    src="https://psyclin.github.io/PineLabs/images/team/Amir Shamsi Ardekani.jpg"
+                    alt=""
+                    class="round"
+                  />
                   <h2 class="bottommargin_0">Amir Shamsi Ardekani</h2>
                   <p class="small-text">Masters Student</p>
                 </div>
 
                 <ul class="list1 no-bullets topmargin_40">
-
                   <li>
                     <div class="media small-teaser">
                       <div class="media-left">
@@ -145,8 +161,6 @@
               </div>
 
               <div class="col-md-6 col-md-offset-1">
-                
-
                 <!-- Nav tabs -->
                 <ul class="nav nav-tabs topmargin_40" role="tablist">
                   <li class="active">
@@ -162,17 +176,20 @@
                   <div class="tab-pane fade in active" id="tab1">
                     <h3 class="topmargin_0">Biography:</h3>
                     <p>
-                      My true passion lies in rehabilitation research and education. Having graduated with a Bachelor of
-Science in Physiotherapy from the Tehran University of Medical Sciences (2020), I have explored various
-research topics in rehab, including cognition, pediatrics, sports, treatment methods, and education.
-Working as a team physiotherapist for a professional soccer team provided me with invaluable clinical
-experience that informs my research and teaching approach. Under Dr. Roberts supervision, I aim to
-conduct world-class research in rehabilitation education.
+                      My true passion lies in rehabilitation research and
+                      education. Having graduated with a Bachelor of Science in
+                      Physiotherapy from the Tehran University of Medical
+                      Sciences (2020), I have explored various research topics
+                      in rehab, including cognition, pediatrics, sports,
+                      treatment methods, and education. Working as a team
+                      physiotherapist for a professional soccer team provided me
+                      with invaluable clinical experience that informs my
+                      research and teaching approach. Under Dr. Roberts
+                      supervision, I aim to conduct world-class research in
+                      rehabilitation education.
                     </p>
                     <h3 class="topmargin_0">Master's Thesis:</h3>
-                    <p>
-                      To be added...
-                    </p>
+                    <p>To be added...</p>
                   </div>
 
                   <div class="tab-pane fade in inactive" id="tab2">
@@ -183,7 +200,6 @@ conduct world-class research in rehabilitation education.
                   </div>
                 </div>
 
-                
                 <!-- eof .tab-content -->
               </div>
             </div>
