--- a/members/john_hu.html
+++ b/members/john_hu.html
@@ -17,10 +17,23 @@
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/animations.css" />
-    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/fonts.css" />
-    <link rel="stylesheet" href="https://psyclin.github.io/PineLabs/css/main.css" id="color-switcher-link" />
+    <link
+      rel="stylesheet"
+      href="https://psyclin.github.io/PineLabs/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://psyclin.github.io/PineLabs/css/animations.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://psyclin.github.io/PineLabs/css/fonts.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://psyclin.github.io/PineLabs/css/main.css"
+      id="color-switcher-link"
+    />
     <script src="https://psyclin.github.io/PineLabs/js/vendor/modernizr-2.6.2.min.js"></script>
 
     <!--[if lt IE 9]>
@@ -103,7 +116,7 @@
         <!-- template sections -->
 
         <div id="header"></div>
-		
+
         <section
           class="page_breadcrumbs cs main_color2 parallax section_padding_50"
         >
@@ -121,13 +134,16 @@
             <div class="row">
               <div class="col-md-5">
                 <div class="text-center">
-                  <img src="https://psyclin.github.io/PineLabs/images/team/05.jpg" alt="" class="round" />
+                  <img
+                    src="https://psyclin.github.io/PineLabs/images/team/05.jpg"
+                    alt=""
+                    class="round"
+                  />
                   <h2 class="bottommargin_0">John Hu</h2>
                   <p class="small-text">PH.D. Candidate</p>
                 </div>
 
                 <ul class="list1 no-bullets topmargin_40">
-
                   <li>
                     <div class="media small-teaser">
                       <div class="media-left">
@@ -145,8 +161,6 @@
               </div>
 
               <div class="col-md-6 col-md-offset-1">
-                
-
                 <!-- Nav tabs -->
                 <ul class="nav nav-tabs topmargin_40" role="tablist">
                   <li class="active">
@@ -161,13 +175,11 @@
                 <div class="tab-content top-color-border bottommargin_30">
                   <div class="tab-pane fade in active" id="tab1">
                     <h3 class="topmargin_0">Biography:</h3>
-                    <p>
-                    To be added...
-                    </p>
+                    <p>To be added...</p>
                     <h3 class="topmargin_0">Ph. D. Thesis:</h3>
                     <p>
-                      Inclusive knowledge translation through digital media: Exploring impacts on
-                      health and equity
+                      Inclusive knowledge translation through digital media:
+                      Exploring impacts on health and equity
                     </p>
                   </div>
 
@@ -175,29 +187,40 @@
                     <h3 class="topmargin_0">Research Articles:</h3>
                     <ul class="list1 darklinks">
                       <li>
-                        <a href="https://doi.org/10.1186/s12939-023-02080-5">Access to health knowledge for health equality: a multi-phase review focused on
-                          disability-health.</a>
+                        <a href="https://doi.org/10.1186/s12939-023-02080-5"
+                          >Access to health knowledge for health equality: a
+                          multi-phase review focused on disability-health.</a
+                        >
                       </li>
                       <li>
-                        <a href="https://dx.doi.org/10.21622/ILCC.2023.03.2.174">Participatory Action Research:
-                          performative critical consciousness as social ritual.</a>
-                      </li>
-                      <a href="https://dx.doi.org/10.13187/jare.2023.1.6">Supporting Youth Access to Research Dissemination through Digital Media:
-                        Analysis of Mental Health Impacts.</a>
-                    </li>
-                      <li>
-                        <a href="https://doi.org/10.47540/ijqr.v3i1.850">Digital Humanities as Inclusive Knowledge Translation: A Multi-Phase Qualitative
-                          Pilot Study.</a>
+                        <a href="https://dx.doi.org/10.21622/ILCC.2023.03.2.174"
+                          >Participatory Action Research: performative critical
+                          consciousness as social ritual.</a
+                        >
                       </li>
                       <li>
-                        <a href="https://doi.org/10.22037/sdh.v9i1.41754">Inequalities in travel time, cost, risk as cause of persistent social and health
-                          inequalities.</a>
+                        <a href="https://dx.doi.org/10.13187/jare.2023.1.6"
+                          >Supporting Youth Access to Research Dissemination
+                          through Digital Media: Analysis of Mental Health
+                          Impacts.</a
+                        >
+                      </li>
+                      <li>
+                        <a href="https://doi.org/10.47540/ijqr.v3i1.850"
+                          >Digital Humanities as Inclusive Knowledge
+                          Translation: A Multi-Phase Qualitative Pilot Study.</a
+                        >
+                      </li>
+                      <li>
+                        <a href="https://doi.org/10.22037/sdh.v9i1.41754"
+                          >Inequalities in travel time, cost, risk as cause of
+                          persistent social and health inequalities.</a
+                        >
                       </li>
                     </ul>
                   </div>
                 </div>
 
-                
                 <!-- eof .tab-content -->
               </div>
             </div>
