--- a/group_projects.html
+++ b/group_projects.html
@@ -181,7 +181,7 @@
                       >
                         <div class="item-media">
                           <img
-                            src="ihttps://psyclin.github.io/PineLabs/images/teaser01.jpg"
+                            src="https://psyclin.github.io/PineLabs/images/teaser01.jpg"
                             alt=""
                           />
                           <div class="media-links">
